Fix next section arrow overlapping with the border

--- a/ckanext/orgportals/fanstatic/style.css
+++ b/ckanext/orgportals/fanstatic/style.css
@@ -7936,4 +7936,5 @@ div[data-section="media"] {
     border-bottom-color: rgb(211, 211, 211);
     border-bottom-style: solid;
     border-bottom-width: initial;
+    margin-bottom: 25px;
 }
